--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "quill-image-resize-module",
-  "version": "3.0.0",
+  "name": "@rebuild/quill-image-resize-module",
+  "version": "0.0.0",
+  "type": "module",
   "description": "A module for Quill rich text editor to allow images to be resized.",
-  "main": "image-resize.min.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "webpack -p --progress --colors",
-    "dev": "webpack --progress --colors --watch",
-    "lint": "eslint --ext js,es6 src",
-    "fixlint": "eslint --fix --ext js,es6 src"
+    "build": "gulp",
+    "dev": "gulp dev",
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kensnyder/quill-image-resize-module.git"
+    "url": "git+https://github.com/zzxming/quill-image-resize-module.git"
   },
+  "author": "@kensnyder",
   "keywords": [
     "quill",
     "quilljs",
@@ -21,35 +22,20 @@
     "resize",
     "sizer"
   ],
-  "author": "@kensnyder",
-  "contributors": [
-    {
-      "name": "Wikia",
-      "url": "https://github.com/Wikia"
-    }
+  "files": [
+    "dist"
   ],
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kensnyder/quill-image-resize-module/issues"
-  },
-  "homepage": "https://github.com/kensnyder/quill-image-resize-module#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-es2015": "^6.24.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "webpack": "^2.3.3"
+    "@babel/preset-env": "^7.24.4",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "gulp": "^5.0.0",
+    "rollup": "^4.16.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4",
-    "quill": "^1.2.2",
-    "raw-loader": "^0.5.1"
+    "lodash-es": "^4.17.21",
+    "quill": "^1.3.7"
   }
 }
