--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
   "name": "quill-image-resize-module-rebuild",
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
   "description": "A module for Quill rich text editor to allow images to be resized.",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "gulp",
-    "dev": "gulp dev",
-    "lint": "eslint . --cache",
-    "lint:fix": "eslint . --fix"
-  },
+  "author": "@kensnyder",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zzxming/quill-image-resize-module.git"
   },
-  "author": "@kensnyder",
   "keywords": [
     "quill",
     "quilljs",
@@ -22,20 +16,33 @@
     "resize",
     "sizer"
   ],
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
-  "license": "MIT",
+  "scripts": {
+    "build": "gulp",
+    "dev": "gulp dev",
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --fix"
+  },
+  "dependencies": {
+    "lodash-es": "^4.17.21",
+    "quill": "^1.3.7"
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
+    "@zzxming/eslint-config": "^0.0.9",
+    "eslint-merge-processors": "^0.1.0",
+    "eslint-plugin-jsonc": "^2.16.0",
+    "eslint-plugin-markdown": "^5.1.0",
+    "eslint-plugin-yml": "^1.14.0",
     "gulp": "^5.0.0",
-    "rollup": "^4.16.1"
-  },
-  "dependencies": {
-    "lodash-es": "^4.17.21",
-    "quill": "^1.3.7"
+    "jsonc-eslint-parser": "^2.4.0",
+    "rollup": "^4.16.1",
+    "yaml-eslint-parser": "^1.2.3"
   }
 }
