--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "lint": "eslint . --cache",
     "lint:fix": "eslint . --fix"
   },
+  "peerDependencies": {
+    "quill": ">=1.3.7"
+  },
   "dependencies": {
-    "lodash-es": "^4.17.21",
-    "quill": "^1.3.7"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
