--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quill-image-resize-module-rebuild",
   "type": "module",
-  "version": "0.0.3-beta.1",
+  "version": "0.0.3",
   "description": "A module for Quill rich text editor to allow images to be resized.",
   "author": "@kensnyder",
   "license": "MIT",
